# RPA-Studio

./: .gitignore  pyproject.toml
.claude/: launch.json  settings.local.json
backend/rpa_studio/: locale_kr.py  models.py
backend/rpa_studio/actions/: app_control.py  base.py  browser.py  image_match.py  notify.py  ocr.py  ui_auto.py  web_auto.py
backend/rpa_studio/api/: schemas.py  server.py  state.py
backend/rpa_studio/engine/: condition.py  executor.py
backend/rpa_studio/project/: project_file.py
backend/rpa_studio/scheduler/: triggers.py
backend/tests/: test_actions.py  test_engine.py  test_integration.py  test_scheduler.py
docs/superpowers/plans/: 2026-04-02-rpa-studio.md
docs/superpowers/specs/: 2026-04-02-rpa-studio-design.md
electron/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
electron/src/: main.ts  preload.ts  pythonManager.ts  tray.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/i18n/: index.ts  ko.json
frontend/src/stores/: executionStore.ts  projectStore.ts
frontend/src/types/: models.ts
src/rpa_studio/: main.py  models.py
src/rpa_studio/actions/: excel_ops.py  file_ops.py  image_match.py  keyboard_mouse.py  notify.py
src/rpa_studio/engine/: context.py  recorder.py
src/rpa_studio/gui/: action_palette.py  element_picker.py  execution_thread.py  log_panel.py  main_window.py  property_panel.py  recorder_toolbar.py  schedule_view.py  step_editor.py  style.py  (+3 more)
tests/: test_models.py  test_project_file.py
(+17 files in other folders)
