[project]
name = "rpa-studio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "openpyxl>=3.1.0",
    "APScheduler>=3.10.0",
    "watchdog>=4.0.0",
    "pystray>=0.19.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-qt>=4.2.0"]

[project.gui-scripts]
rpa-studio = "rpa_studio.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
