[project]
name = "rpa-studio"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "openpyxl>=3.1.0",
    "APScheduler>=3.10.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
    "mss>=9.0.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]
ocr = ["pytesseract>=0.3.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
